src/lenguajes/antlr/PSGrammarParser.java
// Generated from PSGrammar.g4 by ANTLR 4.5.3
package lenguajes.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PSGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, SUBPROCESO=7, FINSUBPROCESO=8, 
		FINFUNCION=9, PROCESO=10, ALGORITMO=11, FINPROCESO=12, FINALGORITMO=13, 
		SI=14, ENTONCES=15, FINSI=16, SINO=17, PARA=18, HASTA=19, CON=20, PASO=21, 
		FINPARA=22, HACER=23, MIENTRAS=24, FINMIENTRAS=25, REPETIR=26, QUE=27, 
		SEGUN=28, CASO=29, DE=30, OTRO=31, MODO=32, ESPERAR=33, TECLA=34, SEGUNDOS=35, 
		MILISEGUNDOS=36, BORRAR=37, LIMPIAR=38, PANTALLA=39, DIMENSION=40, LEER=41, 
		ESCRIBIR=42, DEFINIR=43, COMO=44, FINSEGUN=45, VERDADERO=46, FALSO=47, 
		ENTERO=48, REAL=49, NUMERO=50, NUMERICO=51, TEXTO=52, CADENA=53, CARACTER=54, 
		LOGICO=55, ID=56, TOKEN_ASIG=57, TOKEN_IGUAL=58, TOKEN_DIF=59, TOKEN_MAYOR=60, 
		TOKEN_MAYOR_IGUAL=61, TOKEN_MENOR=62, TOKEN_MENOR_IGUAL=63, TOKEN_PAR_IZR=64, 
		TOKEN_PAR_DER=65, TOKEN_COR_IZR=66, TOKEN_COR_DER=67, TOKEN_COMA=68, TOKEN_PYC=69, 
		TOKEN_MUL=70, TOKEN_DIV=71, TOKEN_MAS=72, TOKEN_MENOS=73, TOKEN_POT=74, 
		TOKEN_MOD=75, TOKEN_DOSP=76, TOKEN_CADENA=77, TOKEN_REAL=78, TOKEN_ENTERO=79, 
		WS=80, LINE_COMMENT=81;
	public static final int
		RULE_init = 0, RULE_sp = 1, RULE_end_sp = 2, RULE_p = 3, RULE_main_begin = 4, 
		RULE_main_end = 5, RULE_command = 6, RULE_if_sentence = 7, RULE_end_if = 8, 
		RULE_for_sentence = 9, RULE_while_sentence = 10, RULE_dowhile_sentence = 11, 
		RULE_switch_sentence = 12, RULE_case_sentence = 13, RULE_default_case = 14, 
		RULE_wait_sentence = 15, RULE_wait_type = 16, RULE_unity = 17, RULE_clear = 18, 
		RULE_dim = 19, RULE_def_dim = 20, RULE_def_dim_list = 21, RULE_read = 22, 
		RULE_write = 23, RULE_command_opt = 24, RULE_opt_args = 25, RULE_args = 26, 
		RULE_array_pos = 27, RULE_definition = 28, RULE_exp = 29, RULE_b_term = 30, 
		RULE_eq_factor = 31, RULE_dif_opt = 32, RULE_b_factor = 33, RULE_rel_opt = 34, 
		RULE_exp_num = 35, RULE_sum_opt = 36, RULE_mod_term = 37, RULE_mul_opt = 38, 
		RULE_s_term = 39, RULE_not_factor = 40, RULE_factor = 41, RULE_opt_complement = 42, 
		RULE_tipo = 43, RULE_token_y = 44, RULE_token_o = 45, RULE_token_neg = 46;
	public static final String[] ruleNames = {
		"init", "sp", "end_sp", "p", "main_begin", "main_end", "command", "if_sentence", 
		"end_if", "for_sentence", "while_sentence", "dowhile_sentence", "switch_sentence", 
		"case_sentence", "default_case", "wait_sentence", "wait_type", "unity", 
		"clear", "dim", "def_dim", "def_dim_list", "read", "write", "command_opt", 
		"opt_args", "args", "array_pos", "definition", "exp", "b_term", "eq_factor", 
		"dif_opt", "b_factor", "rel_opt", "exp_num", "sum_opt", "mod_term", "mul_opt", 
		"s_term", "not_factor", "factor", "opt_complement", "tipo", "token_y", 
		"token_o", "token_neg"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'&'", "'y'", "'|'", "'o'", "'~'", "'no'", null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'<-'", "'='", 
		"'<>'", "'>'", "'>='", "'<'", "'<='", "'('", "')'", "'['", "']'", "','", 
		"';'", "'*'", "'/'", "'+'", "'-'", "'^'", "'%'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "SUBPROCESO", "FINSUBPROCESO", 
		"FINFUNCION", "PROCESO", "ALGORITMO", "FINPROCESO", "FINALGORITMO", "SI", 
		"ENTONCES", "FINSI", "SINO", "PARA", "HASTA", "CON", "PASO", "FINPARA", 
		"HACER", "MIENTRAS", "FINMIENTRAS", "REPETIR", "QUE", "SEGUN", "CASO", 
		"DE", "OTRO", "MODO", "ESPERAR", "TECLA", "SEGUNDOS", "MILISEGUNDOS", 
		"BORRAR", "LIMPIAR", "PANTALLA", "DIMENSION", "LEER", "ESCRIBIR", "DEFINIR", 
		"COMO", "FINSEGUN", "VERDADERO", "FALSO", "ENTERO", "REAL", "NUMERO", 
		"NUMERICO", "TEXTO", "CADENA", "CARACTER", "LOGICO", "ID", "TOKEN_ASIG", 
		"TOKEN_IGUAL", "TOKEN_DIF", "TOKEN_MAYOR", "TOKEN_MAYOR_IGUAL", "TOKEN_MENOR", 
		"TOKEN_MENOR_IGUAL", "TOKEN_PAR_IZR", "TOKEN_PAR_DER", "TOKEN_COR_IZR", 
		"TOKEN_COR_DER", "TOKEN_COMA", "TOKEN_PYC", "TOKEN_MUL", "TOKEN_DIV", 
		"TOKEN_MAS", "TOKEN_MENOS", "TOKEN_POT", "TOKEN_MOD", "TOKEN_DOSP", "TOKEN_CADENA", 
		"TOKEN_REAL", "TOKEN_ENTERO", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PSGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PSGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public List<SpContext> sp() {
			return getRuleContexts(SpContext.class);
		}
		public SpContext sp(int i) {
			return getRuleContext(SpContext.class,i);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSGrammarVisitor ) return ((PSGrammarVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUBPROCESO) {
				{
				{
				setState(94);
				sp();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			p();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpContext extends ParserRuleContext {
		public TerminalNode SUBPROCESO() { return getToken(PSGrammarParser.SUBPROCESO, 0); }
		public List<TerminalNode> ID() { return getTokens(PSGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PSGrammarParser.ID, i);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public End_spContext end_sp() {
			return getRuleContext(End_spContext.class,0);
		}
		public TerminalNode TOKEN_ASIG() { return getToken(PSGrammarParser.TOKEN_ASIG, 0); }
		public TerminalNode TOKEN_PAR_IZR() { return getToken(PSGrammarParser.TOKEN_PAR_IZR, 0); }
		public TerminalNode TOKEN_PAR_DER() { return getToken(PSGrammarParser.TOKEN_PAR_DER, 0); }
		public List<TerminalNode> TOKEN_COMA() { return getTokens(PSGrammarParser.TOKEN_COMA); }
		public TerminalNode TOKEN_COMA(int i) {
			return getToken(PSGrammarParser.TOKEN_COMA, i);
		}
		public SpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).enterSp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).exitSp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSGrammarVisitor ) return ((PSGrammarVisitor<? extends T>)visitor).visitSp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpContext sp() throws RecognitionException {
		SpContext _localctx = new SpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(SUBPROCESO);
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(103);
				match(ID);
				setState(104);
				match(TOKEN_ASIG);
				}
				break;
			}
			setState(107);
			match(ID);
			setState(120);
			_la = _input.LA(1);
			if (_la==TOKEN_PAR_IZR) {
				{
				setState(108);
				match(TOKEN_PAR_IZR);
				setState(117);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(109);
					match(ID);
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==TOKEN_COMA) {
						{
						{
						setState(110);
						match(TOKEN_COMA);
						setState(111);
						match(ID);
						}
						}
						setState(116);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(119);
				match(TOKEN_PAR_DER);
				}
			}

			setState(122);
			command();
			setState(123);
			end_sp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class End_spContext extends ParserRuleContext {
		public TerminalNode FINSUBPROCESO() { return getToken(PSGrammarParser.FINSUBPROCESO, 0); }
		public TerminalNode FINFUNCION() { return getToken(PSGrammarParser.FINFUNCION, 0); }
		public End_spContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_sp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).enterEnd_sp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).exitEnd_sp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSGrammarVisitor ) return ((PSGrammarVisitor<? extends T>)visitor).visitEnd_sp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final End_spContext end_sp() throws RecognitionException {
		End_spContext _localctx = new End_spContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_end_sp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==FINSUBPROCESO || _la==FINFUNCION) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PContext extends ParserRuleContext {
		public Main_beginContext main_begin() {
			return getRuleContext(Main_beginContext.class,0);
		}
		public TerminalNode ID() { return getToken(PSGrammarParser.ID, 0); }
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public Main_endContext main_end() {
			return getRuleContext(Main_endContext.class,0);
		}
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).enterP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).exitP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSGrammarVisitor ) return ((PSGrammarVisitor<? extends T>)visitor).visitP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_p);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			main_begin();
			setState(128);
			match(ID);
			setState(129);
			command();
			setState(130);
			main_end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_beginContext extends ParserRuleContext {
		public TerminalNode PROCESO() { return getToken(PSGrammarParser.PROCESO, 0); }
		public TerminalNode ALGORITMO() { return getToken(PSGrammarParser.ALGORITMO, 0); }
		public Main_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).enterMain_begin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).exitMain_begin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSGrammarVisitor ) return ((PSGrammarVisitor<? extends T>)visitor).visitMain_begin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_beginContext main_begin() throws RecognitionException {
		Main_beginContext _localctx = new Main_beginContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_main_begin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !(_la==PROCESO || _la==ALGORITMO) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_endContext extends ParserRuleContext {
		public TerminalNode FINPROCESO() { return getToken(PSGrammarParser.FINPROCESO, 0); }
		public TerminalNode FINALGORITMO() { return getToken(PSGrammarParser.FINALGORITMO, 0); }
		public Main_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).enterMain_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).exitMain_end(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSGrammarVisitor ) return ((PSGrammarVisitor<? extends T>)visitor).visitMain_end(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_endContext main_end() throws RecognitionException {
		Main_endContext _localctx = new Main_endContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_main_end);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !(_la==FINPROCESO || _la==FINALGORITMO) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public TerminalNode TOKEN_PYC() { return getToken(PSGrammarParser.TOKEN_PYC, 0); }
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public TerminalNode ID() { return getToken(PSGrammarParser.ID, 0); }
		public Command_optContext command_opt() {
			return getRuleContext(Command_optContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public DimContext dim() {
			return getRuleContext(DimContext.class,0);
		}
		public If_sentenceContext if_sentence() {
			return getRuleContext(If_sentenceContext.class,0);
		}
		public For_sentenceContext for_sentence() {
			return getRuleContext(For_sentenceContext.class,0);
		}
		public While_sentenceContext while_sentence() {
			return getRuleContext(While_sentenceContext.class,0);
		}
		public Dowhile_sentenceContext dowhile_sentence() {
			return getRuleContext(Dowhile_sentenceContext.class,0);
		}
		public Switch_sentenceContext switch_sentence() {
			return getRuleContext(Switch_sentenceContext.class,0);
		}
		public Wait_sentenceContext wait_sentence() {
			return getRuleContext(Wait_sentenceContext.class,0);
		}
		public ClearContext clear() {
			return getRuleContext(ClearContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSGrammarListener ) ((PSGrammarListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSGrammarVisitor ) return ((PSGrammarVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_command);
		int _la;
		try {
			setState(182);
			switch (_input.LA(1)) {
			case DEFINIR:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				definition();
				setState(137);
				match(TOKEN_PYC);
				setState(138);
				command();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(ID);
				setState(142);
				_la = _input.LA(1);
				if (((((_la - 57)) & ~0x3f) == 0 && ((1L << (_la - 57)) & ((1L << (TOKEN_ASIG - 57)) | (1L << (TOKEN_PAR_IZR - 57)) | (1L << (TOKEN_COR_IZR - 57)))) != 0)) {
					{
					setState(141);
					command_opt();
					}
				}

				setState(144);
				match(TOKEN_PYC);
				setState(145);
				command();
				}
				break;
			case LEER:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				read();
				setState(147);
				match(TOKEN_PYC);
				setState(148);
				command();
				}
				break;
			case ESCRIBIR:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				write();
				setState(151);
				match(TOKEN_PYC);
				setState(152);
				command();
				}
				break;
			case DIMENSION:
				enterOuterAlt(_localctx, 5);
				{
				setState(154);
				dim();
				setState(155);
				match(TOKEN_PYC);
				setState(156);
				command();
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 6);
				{
				setState(158);
				if_sentence();
				setState(159);
				command();
				}
				break;
			case PARA:
				enterOuterAlt(_localctx, 7);
				{
				setState(161);
				for_sentence();
				setState(162);
				command();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 8);
				{
				setState(164);
				while_sentence();
				setState(165);
				command();
				}
				break;
			case REPETIR:
				enterOuterAlt(_localctx, 9);
				{
				setState(167);
				dowhile_sentence();
				setState(168);
				command();
				}
				break;
			case SEGUN:
				enterOuterAlt(_localctx, 10);
				{
				setState(170);
				switch_sentence();
				setState(171);
				command();
				}
				break;
			case ESPERAR:
				enterOuterAlt(_localctx, 11);
				{
				setState(173);
				wait_sentence();
				setState(174);
				match(TOKEN_PYC);
				setState(175);
				command();
				}
				break;
			case BORRAR:
			case LIMPIAR:
				enterOuterAlt(_localctx, 12);
				{
				setState(177);
				clear();
				setState(178);
				match(TOKEN_PYC);
				setState(179);
				command();
				}
				break;
			case FINSUBPROCESO:
			case FINFUNCION:
			case FINPROCESO:
			case FINALGORITMO:
			case FINSI:
			case SINO:
			case HASTA:
			case FINPARA:
			case FINMIENTRAS:
			case CASO:
			case DE:
			case FINSEGUN:
				enterOuterAlt(_localctx, 13);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
